--- a/project.config
+++ b/project.config
@@ -1,6 +1,8 @@
 [access]
-	inheritFrom = Public-Projects
+	inheritFrom = domain-graphics
 [receive]
 	requireSignedOffBy = true
 [access "refs/*"]
 	owner = group Administrators
+[project]
+	state = active
