--- a/project.config
+++ b/project.config
@@ -6,3 +6,6 @@
 	owner = group Administrators
 [project]
 	state = active
+	description = "Domain: Graphics & UI Framework;"\n\
+"Licenses: Zlib;"\n\
+
