Changed parent to scm/acls/domain_graphics_and_ui_framework.

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = domain-graphics
+	inheritFrom = scm/acls/domain_graphics_and_ui_framework
 [receive]
 	requireSignedOffBy = true
 [access "refs/*"]
