Project settings updated

--- a/project.config
+++ b/project.config
@@ -5,6 +5,4 @@
 [access "refs/*"]
 	owner = group Administrators
 [project]
-	description = "Domain: Graphics & UI Framework;"\n\
-"Licenses: Zlib;"\n\
-
+	description = "Domain: Graphics System / Rendering Engine;"
